--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 1000px;
+    -webkit-app-region: no-drag;
 }
 
 .game-card {
